syntax = "proto3";

package notifications;

service NotificationService {
  rpc AddNotification (AddNotificationRequest) returns (AddNotificationResponse);
  rpc DeleteNotification (DeleteNotificationRequest) returns (DeleteNotificationResponse);
}

message MessageResponse {
  map<string, string> data = 1;
}

message Options {
  string vendor = 1;
  string vendorSecret = 2;
}

message NotificationObj{
  string resourceUid = 1;
  string title = 2;
  string message = 3;
  string scope = 4;
  string vendor = 5;
  string product = 6;
  string category = 7;
  string cta = 8;
}

message AddNotificationRequest {
  repeated NotificationObj notifications = 1;
  Options options = 2;
}
  
message AddNotificationResponse {
  MessageResponse response = 1;
}

message DeleteNotificationRequest{
  repeated string ids = 1;
  Options options = 2;
}

message DeleteNotificationResponse{
  MessageResponse response = 1;
}
